[project]
name = "fortegia-common"
version = "0.1.0"
description = "Shared service-to-service CONTRACTS for the Fortegia platform (auth + AI Hub schemas). Contracts only — never business logic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortegia_common"]
