[project]
name = "fortegia-common"
version = "0.1.1"
description = "Shared service-to-service CONTRACTS for the Fortegia platform (auth + AI Hub schemas). Contracts only — never business logic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortegia_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
